# goit-software-08

./: README.md  connect.py  models.py  pyproject.toml  quotes.json  seed.py
part_2/: config.ini  connect.py  consumer.py  model.py  producer.py
